tests/snapshots/snapshot_tests__array_tiling_rew.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_tiling_rew.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a Z val2_next) Z) val2_next)",
        "(= (Read-Int-Int (Write-Int-Int a Z val2_next) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!7 Z val2) Z) val2)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!7 Z val2) Z) (Read-Int-Int Array-Int-Int!val!7 Z))",
    ],
}
