tests/snapshots/snapshot_tests__array_tiling_rewrev.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_tiling_rewrev.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!6 i val2_next) Z) (Read-Int-Int Array-Int-Int!val!6 Z))",
    ],
}
