tests/snapshots/snapshot_tests__array_tiling_skipped.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_tiling_skipped.vmt",
    status: Timeout,
    used_instantiations: [],
}
